--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<title>Dolce Vita</title>
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-	<section>
+	<div>
 		<header>
 			<div class="container">
 				<nav>
@@ -26,7 +26,7 @@
 			</div>
 			<div class="dolce-gallery">
 				<div class="dolce-gallery-item">
-					<img src="img/iPhone.png" alt="gallery-man"> <!-- gallery-man -->
+					<img src="img/iPhone.png" alt="gallery-man">
 				</div>
 				<div class="dolce-gallery-item">
 					<img src="img/gallery-darkbed.png" alt="gallery-darkbed">
@@ -84,9 +84,10 @@
 				</div>
 				<div class="dolce-gallery-item">
 					<img src="img/gallery-classic.png" alt="gallery-classic">
+				</div>
 			</div>
 		</div>
-	</section>
+	</div>
 	<section class="catalog">
 		<div class="dolce-catalog-header"></div>
 		<div class="container">
@@ -386,10 +387,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="cite">
-		<!-- <div class="container">
-		
-		</div> -->
+	<div class="cite">
 		<div class="cite-header">
 			<div class="container">
 				<div class="cite-text">
@@ -407,14 +405,14 @@
 				<span>Директор галереи интерьера "Dolce Vita"</span>
 			</div>
 		</div>
-	</section>
-	<section class="contacts">
+	</div>
+	<div class="contacts">
 		<div class="container">
 			<div class="contacts-block">
 				г. Хмельницкий, Староконстантиновское шоссе, 20/3 
 			</div>
 			<div class="map"></div>
 		</div>
-	</section>
+	</div>
 </body>
 </html>
